<resources>
    <string name="app_name">App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="str_heading">My Nanodegree Applications!</string>
    <string name="btn_spotify">SPOTIFY STREAMER</string>
    <string name="btn_scores_app">SCORES APP</string>
    <string name="btn_library_app">LIBRARY APP</string>
    <string name="btn_build_it_bigger">BUILD IT BIGGER</string>
    <string name="btn_xyz_reader">XYZ READER</string>]
    <string name="btn_capstone">CAPSTONE: MY OWN APP</string>
    <string name="toast_prefix">This button will launch my</string>
</resources>
