<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.udacity.freakpirate.appportfolio.MainActivity"
        tools:showIn="@layout/activity_main">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:textSize="@dimen/text_view"
            android:gravity="center"
            android:text="@string/str_heading"/>

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:text="@string/btn_spotify"
            android:textSize="@dimen/button_font"
            android:id="@+id/button_spotify"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:onClick="clickOnBtn"/>

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:text="@string/btn_scores_app"
            android:textSize="@dimen/button_font"
            android:id="@+id/button_scores_app"
            android:layout_below="@+id/button_spotify"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/button_margin"
            android:onClick="clickOnBtn"/>

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:text="@string/btn_library_app"
            android:textSize="@dimen/button_font"
            android:id="@+id/button_library_app"
            android:layout_below="@+id/button_scores_app"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/button_margin"
            android:onClick="clickOnBtn"/>

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:text="@string/btn_build_it_bigger"
            android:textSize="@dimen/button_font"
            android:id="@+id/button_build_it_bigger"
            android:layout_below="@+id/button_library_app"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/button_margin"
            android:onClick="clickOnBtn"/>

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:text="@string/btn_xyz_reader"
            android:textSize="@dimen/button_font"
            android:id="@+id/button_xyz_reader"
            android:layout_below="@+id/button_build_it_bigger"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/button_margin"
            android:onClick="clickOnBtn"/>

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/btn_capstone"
            android:textSize="@dimen/button_font"
            android:textColor="@color/white"
            android:id="@+id/button_capstone"
            android:layout_below="@+id/button_xyz_reader"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/button_margin"
            android:onClick="clickOnBtn"/>

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Hello World!" />-->
    </RelativeLayout>
</ScrollView>